# astro-emulators-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  _example_bundle.py  _example_data.py  _example_smoke.py
examples/advanced/: 01_use_bundle_in_blackjax.py  02_resume_training.py  03_train_transformer_payne_intensity.py  04_bundle_metadata_and_portability.py  05_training_internals.py  06_train_payne_flux_mlp_from_config.py  07_grid_search_payne_flux_mlp_lr.py  README.md
examples/assets/: build_reference_bundle.py
examples/basic/: 00_visualize_datasets.py  01_train_payne_flux_mlp.py  02_load_bundle_predict.py  03_inspect_bundle_metadata.py  04_use_bundle_in_map_fit.py  05_train_cannon_flux.py  06_train_isochrone_mlp.py  07_train_transformer_payne_flux.py  README.md
examples/development/: 01_generate_rff_dataset.py  02_train_rff_mlp.py  03_predict_rff_bundle.py  04_resume_rff_training.py  05_load_bundle_from_huggingface.py  06_blackjax_rff_fit.py  11_train_payne_flux_mlp_soap.py  12_train_mlp_isochrones_soap.py  13_train_cannon_flux.py  14_train_transformer_payne_flux_soap.py  15_train_transformer_payne_intensity_soap.py  16_benchmark_transformer_payne_flux_training_components.py  17_benchmark_cannon_design_matrix.py  18_spectral_resolution_postprocess.py  README.md
examples/experimental/: 01_train_explicit_wavelength_mlp_flux.py  02_train_explicit_wavelength_mlp_intensity.py  03_train_mlp_2d_intensity.py  04_train_binary_classification.py  07_train_isochrone_siren.py  README.md
src/astro_emulators_toolkit/: __init__.py  _typing.py  emulator.py  emulator_runtime.py  io_trees.py  resolver.py  spec.py
tests/api/: test_inference_api.py  test_io_trees.py  test_optional_dependency_surface.py  test_public_surface.py
tests/bundle/: test_bundle_files.py  test_bundle_metadata_display.py  test_bundle_release.py  test_bundle_resolution.py  test_bundle_spec.py  test_input_domain.py  test_reference_scaling.py  test_runtime_contracts.py
tests/config/: test_config_io.py  test_resolver.py
tests/data/: test_array_dataset.py  test_data_loader.py  test_toy_dataset.py
tests/examples/: test_examples_metadata.py  test_intensity_data.py  test_intensity_plotting.py
tests/inference/: test_compose.py  test_reference_bundle_inference.py
tests/models/: test_builtin_stable_family_registration.py  test_cannon_model.py  test_cannon_numerics.py  test_explicit_wavelength_mlp.py  test_intensity_mlp_2d_regression.py  test_model_config_parsing.py  test_siren.py  test_transformer_payne.py  (+5 more)
(+112 files in other folders)
